# company_research_autogen

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
src/company_research/: .env  __init__.py  main.py  utils.py
tests/: __init__.py  test_company_research.py
