[metadata]
name = company_research
version = 0.1.0
author = Hariharan Gopinath
description = A group of AI agents to do stock and google analysis of a company
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=3.0
    black>=22.0
    flake8>=4.0
    mypy>=0.9